--- a/src/component/profile/profile.css
+++ b/src/component/profile/profile.css
@@ -6,10 +6,16 @@
 .profile {
   padding: 100px 0 20px 0;
 }
+.profile .recharts-rectangle {
+  width: 10px !important;
+}
 .profile .graph .grapgh-title {
   margin-top: 30px;
-  font-size: 20px;
+  font-size: 15px;
   background-color: var(--other-color);
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  margin: auto;
   color: white;
   padding: 10px;
   border-radius: 10px;
@@ -18,6 +24,8 @@
   width: 100%;
   margin-top: 80px;
   height: 400px;
+  display: flex;
+  justify-content: center;
 }
 @media (max-width: 767px) {
   .profile #element1 {
