--- a/src/component/profile/profile.scss
+++ b/src/component/profile/profile.scss
@@ -5,8 +5,13 @@
 }
 .profile{
     padding: 100px 0 20px 0;
-    .recharts-rectangle{
-        width: 10px !important;
+ 
+    .recharts-surface{
+        width: 70% !important;
+        @include media(mopile){
+            width: 90% !important ;
+          
+ };
     }
 .graph{
     .grapgh-title{
@@ -15,9 +20,13 @@
         background-color: var(--other-color);
         max-width: fit-content;
         margin: auto;
+        margin-top: 60px;
         color: white;
         padding: 10px;
         border-radius: 10px;
+        @include media(mopile){
+            font-size: 10px
+ };
     }
 }
      #element1{
